<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MActivity" >

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/app_name"
        android:textSize="80sp" />

    <Button
        android:id="@+id/ButtonEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="50dp"
        android:onClick="buttonClick"
        android:text="@string/mode_easy"
        android:textSize="30sp" />

    <Button
        android:id="@+id/ButtonHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonEasy"
        android:layout_alignBottom="@+id/ButtonEasy"
        android:layout_alignRight="@+id/TextViewTitle"
        android:layout_marginRight="50dp"
        android:onClick="buttonClick"
        android:text="@string/mode_hard"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TextViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/select_mode"
        android:textSize="30sp" />

</RelativeLayout>